# Hive

./: .gitignore  README.md  cli.py  hive_plan.docx  plan.txt  pyproject.toml
config/: default.toml
coordinator/: __init__.py  agent.py  auth.py  binary_manager.py  capacity.py  config.py  discovery.py  inference.py  main.py  metrics.py  model_downloader.py  model_watcher.py  router.py  rpc_client.py  shard_planner.py  tools.py
models/: registry.json
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  index.css
ui/src/components/: Sidebar.jsx
ui/src/pages/: Chat.jsx  Dashboard.jsx  Models.jsx  Settings.jsx
worker/: __init__.py  main.py  rpc_server.py
